--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,117 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+.form-to-search {
+  display: flex;
+  margin-top: 36px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.form-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid#808080;
+  padding-left: 16px;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: left;
+}
+.form-input:hover,
+.form-input:focus {
+  border: 1px solid #000;
+}
+.button-submit {
+  width: 91px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  border: none;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+.button-submit:hover,
+.button-submit:focus {
+  background-color: #6c8cff;
+}
+
+/* Styles for Gallery */
+.gallery {
+  margin-top: 32px;
+  width: 1440px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.card {
+  height: 200px;
+  width: 360px;
+  border: 1px solid #808080;
+  background-color: #fff;
+}
+.card-image {
+  width: 360px;
+  height: 152px;
+  object-fit: cover;
+}
+.discription-list {
+  display: flex;
+  flex-direction: row;
+  gap: 28px;
+  justify-content: space-around;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.disc-name {
+  margin-top: 4px;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+.disc-value {
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #4e75ff;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1000;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
+  display: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
