--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -137,3 +137,24 @@
     transform: rotate(360deg);
   }
 }
+.more-container {
+  display: flex;
+  justify-content: center;
+}
+.button-more {
+  width: 120px;
+  height: 40px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  border: none;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+}
+.button-more:hover,
+.button-more:focus {
+  background-color: #6c8cff;
+}
